Add generic Printer class and refactor logging usage