@@ -1,10 +1,10 @@
 package com.solvd.railway;
 
-
 import com.solvd.railway.cargo.model.GeneralCargo;
 import com.solvd.railway.exception.InvalidBoardingException;
 import com.solvd.railway.exception.InvalidRailwayNameException;
 import com.solvd.railway.exception.WagonFullException;
+import com.solvd.railway.generics.Printer;
 import com.solvd.railway.passenger.document.model.Ticket;
 import com.solvd.railway.passenger.person.model.Passenger;
 import com.solvd.railway.station.model.Route;
@@ -15,53 +15,55 @@ import com.solvd.railway.train.model.Train;
 import com.solvd.railway.train.model.wagon.model.CargoWagon;
 import com.solvd.railway.train.model.wagon.model.PassengerWagon;
 
-import java.util.HashSet;
-import java.util.Map;
-import java.util.Set;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 
 public class Main {
 
-    private static final Logger logger = LogManager.getLogger(Main.class);
-
     public static void main(String[] args) throws WagonFullException, InvalidRailwayNameException {
 
-        logger.info("========== INSTANTIATING OBJECTS ==========");
+        Printer<String> logsPrinter = new Printer<>();
 
-        RailwayManager railway;
-        RailwayManager railway2;
+        logsPrinter.title("\n========== PRINTER GENERICS ==========");
+
+        logsPrinter.title("========== INSTANTIATING OBJECTS ==========");
+
+        RailwayManager railway, railway2;
         PassengerWagon passengerWagon;
         CargoWagon cargoWagon;
+        Station station1, station2, station3;
+        Route route1, route2;
+        Locomotive locomotive1, locomotive2;
+        Train train1, train2;
+        Ticket ticket1, ticket2;
 
-        logger.info("========== InvalidRailwayNameException ==========");
+        logsPrinter.title("========== InvalidRailwayNameException ==========");
         try {
             railway = new RailwayManager("");
             railway2 = new RailwayManager("");
         } catch (InvalidRailwayNameException ex) {
-            logger.warn("Invalid Name: {}", ex.getMessage());
-            railway = new RailwayManager("Brazil Railways"); // retry
+            logsPrinter.error("Invalid Name: " + ex.getMessage());
+            railway = new RailwayManager("Brazil Railways");
             railway2 = new RailwayManager("Brazil Railway");
         }
 
-        Station station1 = new Station("Central Station ", "Curitiba");
-        Station station2 = new Station("North Station ", "Londrina");
-        Station station3 = new Station("South Station ", "Maringa");
-        Route route1 = new Route(station1, station2, 380);
-        Route route2 = new Route(station2, station3, 300);
-        Locomotive locomotive1 = new Locomotive("Passenger P01", 120);
-        Locomotive locomotive2 = new Locomotive("Cargo C01", 80);
-        Train train1 = new Train(1, "Express", locomotive1, station1, route1);
-        Train train2 = new Train(2, "Regional", locomotive2, station2, route2);
+        station1 = new Station("Central Station ", "Curitiba");
+        station2 = new Station("North Station ", "Londrina");
+        station3 = new Station("South Station ", "Maringa");
+        route1 = new Route(station1, station2, 380);
+        route2 = new Route(station2, station3, 300);
+        locomotive1 = new Locomotive("Passenger P01", 120);
+        locomotive2 = new Locomotive("Cargo C01", 80);
+        train1 = new Train(1, "Express", locomotive1, station1, route1);
+        train2 = new Train(2, "Regional", locomotive2, station2, route2);
         passengerWagon = new PassengerWagon(1, 0);
         cargoWagon = new CargoWagon(2, 0);
         train1.addWagon(passengerWagon);
         train2.addWagon(cargoWagon);
+
         Passenger passenger1 = new Passenger("Ana", station2);
         Passenger passenger2 = new Passenger("Pedro", station2);
-        Ticket ticket1 = new Ticket("T001", passenger1, station1, station2, 120.0);
-        Ticket ticket2 = new Ticket("T002", passenger2, station1, station2, 130);
+        ticket1 = new Ticket("T001", passenger1, station1, station2, 120.0);
+        ticket2 = new Ticket("T002", passenger2, station1, station2, 130.0);
         GeneralCargo cargo1 = new GeneralCargo("Steel", 10, station2);
 
         railway.addStation(station1);
@@ -70,140 +72,138 @@ public class Main {
         railway.addTrain(train1);
         railway.addTrain(train2);
 
-        logger.info("========== WagonFullException ==========");
+        logsPrinter.title("========== WagonFullException ==========");
         try {
             passengerWagon.boardPassenger(passenger1);
             cargoWagon.loadCargo(cargo1);
-
         } catch (WagonFullException ex) {
-            logger.warn("Wagon is full: {}", ex.getMessage());
+            logsPrinter.error("Wagon is full: " + ex.getMessage());
             passengerWagon = new PassengerWagon(1, 20);
             cargoWagon = new CargoWagon(2, 100);
             passengerWagon.boardPassenger(passenger1);
             passengerWagon.boardPassenger(passenger2);
         }
 
-        logger.info("========== InvalidBoardingException ==========");
+        logsPrinter.title("========== InvalidBoardingException ==========");
         try {
             ticket1.markUsed();
             ticket1.validateBoarding(train1);
-
         } catch (InvalidBoardingException ex) {
-            logger.warn("Boarding denied: {}", ex.getMessage());
+            logsPrinter.error("Boarding denied: " + ex.getMessage());
         }
 
-        logger.info("====================\n");
+        logsPrinter.title("====================");
 
-        logger.info("========== HASHCODE TEST ==========");
-        logger.info("Railway hashCode: {}", railway.hashCode());
-        logger.info("Train hashCode: {}", train1.hashCode());
-        logger.info("Cargo hashCode: {}", cargo1.hashCode());
+        logsPrinter.title("========== HASHCODE TEST ==========");
+        logsPrinter.info("Railway hashCode: " + railway.hashCode());
+        logsPrinter.info("Train hashCode: " + train1.hashCode());
+        logsPrinter.info("Cargo hashCode: " + cargo1.hashCode());
 
-        logger.info("\n========== OBJECT INFORMATION ==========");
-        logger.info("Railway object:");
-        logger.info(railway.toString());
+        logsPrinter.title("\n========== OBJECT INFORMATION ==========");
+        logsPrinter.info("Railway object:");
+        logsPrinter.info(railway.toString());
 
-        logger.info("\n========== EQUALS TEST ==========");
-        logger.info("Comparing Ticket objects (ticket1 vs ticket2):");
-        logger.info("Result: {}", ticket1.equals(ticket2));
+        logsPrinter.title("\n========== EQUALS TEST ==========");
+        logsPrinter.info("Comparing Ticket objects (ticket1 vs ticket2):");
+        logsPrinter.info("Result: " + ticket1.equals(ticket2));
 
-        logger.info("\nComparing Railway objects (railway vs railway2):");
-        logger.info("Result: {}", railway.equals(railway2));
+        logsPrinter.info("Comparing Railway objects (railway vs railway2):");
+        logsPrinter.info("Result: " + railway.equals(railway2));
 
+        logsPrinter.title("\n========== COLLECTION TESTS ==========");
 
-        logger.info("\n========== COLLECTION TESTS ==========");
+        RailwayManager managerMap, managerList;
+        Train train3, train4, train5, resultant;
+        Passenger nextPassenger, boardedPassenger;
+        Ticket t1, t2;
+        Station lastStation, removedStation;
 
-        logger.info("\n========== SET (NO DUPLICATES) ==========");
+        logsPrinter.title("\n========== SET (NO DUPLICATES) ==========");
 
-        Ticket t1 = new Ticket("T001", passenger1, station1, station2, 120.0);
-        Ticket t2 = new Ticket("T001", passenger2, station1, station2, 130.0);
+        t1 = new Ticket("T001", passenger1, station1, station2, 120.0);
+        t2 = new Ticket("T001", passenger2, station1, station2, 130.0);
 
         t1.addTicket(t1);
-        logger.info("Ticket added: {}", t1.getTicketId());
+        logsPrinter.info("Ticket added: " + t1.getTicketId());
 
         if (t1.addTicket(t2)) {
-            logger.info("Ticket added: {}", t2.getTicketId());
+            logsPrinter.info("Ticket added: " + t2.getTicketId());
         } else {
-            logger.warn("Duplicate ticket detected: {}", t2.getTicketId());
+            logsPrinter.warn("Duplicate ticket detected: " + t2.getTicketId());
         }
 
-        logger.info("Total unique tickets: {}", t1.getTickets().size());
+        logsPrinter.info("Total unique tickets: " + t1.getTickets().size());
 
+        logsPrinter.title("\n========== MAP ==========");
 
-        logger.info("\n========== MAP ==========");
-
-        RailwayManager managerMap = new RailwayManager("Central");
-
-        Train train3 = new Train(3, "Express", locomotive1, station1, route1);
+        managerMap = new RailwayManager("Central");
+        train3 = new Train(3, "Express", locomotive1, station1, route1);
 
         managerMap.addTrain(train3);
 
-        Train resultant = managerMap.getTrainByName("Express");
+        resultant = managerMap.getTrainByName("Express");
         if (resultant != null) {
-            logger.info("Train found: {}", resultant.getName());
+            logsPrinter.info("Train found: " + resultant.getName());
         } else {
-            logger.warn("Train not found.");
+            logsPrinter.warn("Train not found.");
         }
 
-        logger.info("\n========== LIST ==========");
+        logsPrinter.title("\n========== LIST ==========");
 
-        RailwayManager managerList = new RailwayManager("Central");
-        Train train4 = new Train(1, "Express", locomotive1, station1, route1);
-        Train train5 = new Train(2, "Regional", locomotive2, station2, route2);
+        managerList = new RailwayManager("Central");
+        train4 = new Train(1, "Express", locomotive1, station1, route1);
+        train5 = new Train(2, "Regional", locomotive2, station2, route2);
 
         managerList.addTrain(train4);
         managerList.addTrain(train5);
 
         if (managerList.getTrains().isEmpty()) {
-            logger.warn("No trains in the list.");
+            logsPrinter.warn("No trains in the list.");
         } else {
             for (Train train : managerList.getTrains()) {
-                logger.info("Train in list: {}", train.getName());
+                logsPrinter.info("Train in list: " + train.getName());
             }
         }
 
-        logger.info("First train in list: {}", managerList.getTrains().getFirst().getName());
+        logsPrinter.info("First train in list: " + managerList.getTrains().get(0).getName());
 
-        logger.info("\n========== QUEUE ==========");
+        logsPrinter.title("\n========== QUEUE ==========");
 
         station1.addPassengerToQueue(passenger1);
         station1.addPassengerToQueue(passenger2);
 
-        Passenger nextPassenger = station1.getNextPassenger();
+        nextPassenger = station1.getNextPassenger();
         if (nextPassenger != null) {
-            logger.info("Next passenger in queue: {}", nextPassenger.getName());
+            logsPrinter.info("Next passenger in queue: " + nextPassenger.getName());
         } else {
-            logger.warn("No passengers in queue.");
+            logsPrinter.warn("No passengers in queue.");
         }
 
-        Passenger boardedPassenger = station1.boardNextPassenger();
+        boardedPassenger = station1.boardNextPassenger();
         if (boardedPassenger != null) {
-            logger.info("Passenger boarded: {}", boardedPassenger.getName());
+            logsPrinter.info("Passenger boarded: " + boardedPassenger.getName());
         } else {
-            logger.warn("No passenger available for boarding.");
+            logsPrinter.warn("No passenger available for boarding.");
         }
 
-        logger.info("\n========== DEQUE ==========");
+        logsPrinter.title("\n========== DEQUE ==========");
 
         train4.addRecentStation(station1);
         train4.addRecentStation(station2);
         train4.addRecentStation(station3);
 
-        Station lastStation = train5.getLastVisitedStation();
+        lastStation = train4.getLastVisitedStation();
         if (lastStation != null) {
-            logger.info("Last visited station: {}", lastStation.getStationName());
+            logsPrinter.info("Last visited station: " + lastStation.getStationName());
         } else {
-            logger.warn("No recent stations recorded.");
+            logsPrinter.warn("No recent stations recorded.");
         }
 
-        Station removedStation = train1.removeLastVisitedStation();
+        removedStation = train4.removeLastVisitedStation();
         if (removedStation != null) {
-            logger.info("Removed from history: {}", removedStation.getStationName());
+            logsPrinter.info("Removed from history: " + removedStation.getStationName());
         } else {
-            logger.warn("No station to remove from history.");
+            logsPrinter.warn("No station to remove from history.");
         }
-
-
     }
-
 }
